Pull request #757: AG-51115: Fix text styles in Settings Update
Merge in SCITER/adguard-mini from AG-51115-fix-text-styles to master

Squashed commit of the following:

commit 8be1632c4bd2577db67b962016e17276effc570d
Merge: b39045cd 584a9022
Author: Vladislav Abdulmyanov <v.abdulmyanov@adguard.com>
Date:   Fri Mar 6 11:56:33 2026 +0300

    Merge branch 'master' into AG-51115-fix-text-styles

commit b39045cd81171e92674f9f8f667286b30528c10f
Merge: 233b2c1d ac321c80
Author: Vladislav Abdulmyanov <v.abdulmyanov@adguard.com>
Date:   Thu Mar 5 15:18:36 2026 +0300

    Merge branch 'master' into AG-51115-fix-text-styles

commit 233b2c1db561a2969416afa88107af5e96a89095
Author: Vladislav Abdulmyanov <v.abdulmyanov@adguard.com>
Date:   Thu Mar 5 15:08:22 2026 +0300

    AG-51115: Fix text styles in Settings Update

--- a/AdguardMini/sciter-ui/modules/settings/components/Settings/Settings.module.pcss
+++ b/AdguardMini/sciter-ui/modules/settings/components/Settings/Settings.module.pcss
@@ -75,4 +75,12 @@
             text-decoration: none;
         }
     }
+
+    &_underline {
+        text-decoration: underline;
+
+        &:hover {
+            text-decoration: none;
+        }
+    }
 }
